[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/LevelCompleteScreen.gd" id="1"]

[node name="LevelCompleteScreen" type="Control"]
script = ExtResource("1")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -360.0
offset_right = 280.0
offset_bottom = 360.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Level Complete"

[node name="StatsLabel" type="RichTextLabel" parent="Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
bbcode_enabled = true

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="ReplayButton" type="Button" parent="Panel/VBox/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 112)
layout_mode = 2
text = "Replay Level"

[node name="NextButton" type="Button" parent="Panel/VBox/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 112)
layout_mode = 2
text = "Next Level"
